# To-Do-List

./: README.md  pyproject.toml  to-do-tarefas.md
app/: asgi.py  settings.py  urls.py  wsgi.py
app/templates/: criar_conta.html  home.html  login.html  login_sucess.html
criar_conta/: forms.py  views.py
frontend/src/: App.jsx
home/: views.py
login/: admin.py  apps.py  forms.py  views.py
login/templates/: criar_conta.html  login.html
static/: criar_conta.css  login.css
static/css/: criar_conta.css  login.css
