[project]
name = "todo-app"
version = "0.1.0"
description = "Aplicação web de gerenciador de tarefas"
authors = [
    {name = "Alex",email = "alexander97643@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "todo", from = "src"}]

[tool.taskipy.tasks]
run = 'poetry run python manage.py runserver'

[tool.poetry.group.dev.dependencies]
django = "^5.2.4"
taskipy = "^1.14.1"
djangorestframework = "^3.16.0"
decouple = "^0.0.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
