[project]
name = "todo-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "alexander97643@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2,<6.0)"
]

[tool.poetry]
packages = [{include = "todo-list", from = "src"}]

[tool.taskipy.tasks]
run = 'poetry run python manage.py runserver'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
django = "^5.2.5"
taskipy = "^1.14.1"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"